8231025: Incorrect method tag offset for big endian platform

Reviewed-by: egahlin